# MOWNiT

./: .gitignore  README.md  lab1Spraw.docx  lab1vis.ipynb  labPath  ~$b1Spraw.docx
lab1/: CMakeLists.txt  JSONparser.cpp  JSONparser.h  README.md  ex1.cpp  ex1and2.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex4py.py  lab1vis.ipynb  t_double.json
lab1/.ipynb_checkpoints/: lab1vis-checkpoint.ipynb
lab1/data/: bif_diagram0.70.json  bif_diagram0.70_xs.json  sum_error.json  sum_error_xs.json  t_double.json  t_float.json  t_xs.json
lab10/: README.md  time_eval.py  zad1.py  zad2.py
lab11/: README.md  zad1.py
lab12/: test_func.py  zad2.py  zad3.py
lab2/: README.md  ex1.py  ex1v2.py  ex2v2.py  lab2nb.ipynb  time_eval.py  zad1.py  zad2.py  zad2LU.py  zad2LUP.py  zad3.ipynb
lab2/.ipynb_checkpoints/: lab2nb-checkpoint.ipynb
lab2/ex3dir/: Node.py  checker.py  ex3.py  ex3vis.ipynb  main.py  nodeAnNoNetworkx.py  nodeAnalysis.py  readGraph.py
lab2/graphs/: cycle5
lab2/zad3/: checker.py  ex3vis.ipynb  getGraphs.py  main.py  nodeAnNoNetworkx.py  nodeAnalysis.py  readGraph.py
lab3/: README.md  print_res.py  testFunc.py  zad1.py  zad2.py  zad3.py
lab4/: README.md
lab4/binImage/: OptimState.py  SA.py  binaryImage.ipynb  (+5 more)
lab5/: README.md  lab5.ipynb
lab6/: README.md
lab7/: README.md  power_method.py  time_eval.py
lab8/: README.md  loadGraph.py  summary.py  time_eval.py  zad1.py  zad2.py
lab9/: README.md  Sets.py  fftTest.py  fish.py  fourier.py  galia.py  letter_finder.py  other_parse.py  requirements.txt  text_parsing.py
source_code/: ex1and2.cpp  lab1vis.ipynb
(+4065 files in other folders)
